@@ -1,5 +1,7 @@
 = HEAD
 
+* Move Roda.hash_matcher to hash_matcher plugin (jeremyevans)
+
 * Move Roda.request_module and .response_module to module_include plugin (jeremyevans)
 
 * Move RodaResponse#set_cookie and #delete_cookie to cookies plugin (jeremyevans)
